[gd_scene load_steps=4 format=3 uid="uid://b5cdl2cxcrwy"]

[ext_resource type="Script" path="res://scripts/ui/welcome_panel.gd" id="1_1jsuo"]
[ext_resource type="PackedScene" uid="uid://bjotm3lts288c" path="res://scenes/ui/stat_picker.tscn" id="2_r87q1"]

[sub_resource type="Theme" id="Theme_b2tdo"]
Button/font_sizes/font_size = 50

[node name="WelcomePanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_b2tdo")
script = ExtResource("1_1jsuo")

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="MarginContainer" type="MarginContainer" parent="Options"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Load" type="Button" parent="Options"]
layout_mode = 2
text = "Load"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Elf" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Elf"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Dwarf" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Dwarf"

[node name="StatPicker" parent="." instance=ExtResource("2_r87q1")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -538.0
offset_top = -127.0
offset_right = 538.0
offset_bottom = 127.0

[connection signal="pressed" from="Options/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Options/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="HBoxContainer/Elf" to="." method="_on_elf_pressed"]
[connection signal="pressed" from="HBoxContainer/Dwarf" to="." method="_on_dwarf_pressed"]
